<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.vitorarantes.mymovies.CreateMovieActivity">

    <TextView
        android:id="@+id/movie_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_name_title"
        android:textStyle="bold"
        android:layout_margin="5dp"/>

    <RadioGroup
        android:id="@+id/seen_radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_margin="5dp"
        android:orientation="horizontal">
        <RadioButton
            android:text="@string/yes_option"
            android:id="@+id/seen_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"/>
        <RadioButton
            android:text="@string/no_option"
            android:id="@+id/not_seen_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"/>
    </RadioGroup>

    <EditText
        android:id="@+id/movie_name_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/movie_name_title"
        android:layout_margin="5dp"/>

    <TextView
        android:id="@+id/movie_description_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_description_title"
        android:layout_below="@+id/movie_name_editText"
        android:textStyle="bold"
        android:layout_margin="5dp"/>

    <EditText
        android:id="@+id/movie_description_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/movie_description_title"
        android:layout_margin="5dp"/>

    <TextView
        android:id="@+id/movie_director_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_director_title"
        android:layout_below="@+id/movie_description_editText"
        android:textStyle="bold"
        android:layout_margin="5dp"/>

    <EditText
        android:id="@+id/movie_director_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_below="@+id/movie_director_title"
        android:layout_alignStart="@+id/movie_director_title" />

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/genre_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/movie_director_editText">
        <CheckBox
            android:text="@string/horror_genre"
            android:id="@+id/checkbox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <CheckBox
            android:text="@string/scifi_genre"
            android:id="@+id/checkbox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <CheckBox
            android:text="@string/drama_genre"
            android:id="@+id/checkbox3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <CheckBox
            android:text="@string/comedy_genre"
            android:id="@+id/checkbox4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:id="@+id/create_movie_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_title"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"/>

</RelativeLayout>
